add different clicks

--- a/select-random-item/index.html
+++ b/select-random-item/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html> 
 <head>
-
 </head>
 <body>
+    <h1>
+        Double-click only fires itself, not also click
+    </h1>
+    <div id="target">
+
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
