--- a/movable-stacked-card-row/index.html
+++ b/movable-stacked-card-row/index.html
@@ -5,5 +5,26 @@
 <title>Page Title</title>
 </head>
 <body>
-    
+    <div class="cards">
+        <div class="card">
+            <h2>Title</h2>
+            <p>This is an article.</p>
+        </div>
+        <div class="card">
+            <h2>Title</h2>
+            <p>This is an article.</p>
+        </div>
+        <div class="card">
+            <h2>Title</h2>
+            <p>This is an article.</p>
+        </div>
+        <div class="card">
+            <h2>Title</h2>
+            <p>This is an article.</p>
+        </div>
+        <div class="card">
+            <h2>Title</h2>
+            <p>This is an article.</p>
+        </div>
+    </div>
 </html>
